<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/DateRangeDialogChildContainer">

        <TextView
            style="@style/StartDateRangeTextView" />

        <DatePicker
            android:id="@+id/startDateRangePickerView"
            android:datePickerMode="spinner"
            style="@style/DatePickerView" />

    </LinearLayout>

    <LinearLayout
        style="@style/DateRangeDialogChildContainer">

        <TextView
            style="@style/EndDateRangeTextView" />

        <DatePicker
            android:id="@+id/endDateRangePickerView"
            android:datePickerMode="spinner"
            style="@style/DatePickerView" />

    </LinearLayout>

    <Button
        android:id="@+id/dateRangeDoneButtonView"
        style="@style/DialogButtonView"/>

</LinearLayout>