<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/genresRecyclerView"
        style="@style/GenreRecyclerView" />

    <Button
        android:id="@+id/genresDoneButtonView"
        style="@style/DialogButtonView"/>

</LinearLayout>