<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        style="@style/VotesCountDialogTitleTextView"/>

    <EditText
        android:id="@+id/voteCountEditTextView"
        style="@style/VoteCountDialogEditTextView"/>

    <Button
        android:id="@+id/voteCountDoneButtonView"
        style="@style/DialogButtonView"/>
</LinearLayout>