<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rateLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            style="@style/RatingTextView"/>

        <TextView
            android:id="@+id/ratingTextView"
            style="@style/RatingScoreTextView"/>

    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBarView"
        style="@style/RateDialogRatingBarView"/>

    <Button
        android:id="@+id/rateDoneButtonView"
        style="@style/DialogButtonView"/>
</LinearLayout>